--- a/src/components/positionBar/positionBar.scss
+++ b/src/components/positionBar/positionBar.scss
@@ -18,8 +18,8 @@
 		white-space: pre;
 		bottom: 0;
 		white-space: nowrap;
-		width: 1920px;
-		height: 43px;
+		width: 100%;
+		height: 58px;
 		&:before {
 			position: absolute;
 			left: 100%;
@@ -42,7 +42,7 @@
 		}
 		.player {
 			width: 148px;
-			height: 40px;
+			height: 55px;
 			position: relative;
 			display: inline-block;
 			.position {
@@ -51,7 +51,7 @@
 				width: 25px;
 				position: absolute;
 				top: 0;
-				line-height: 40px;
+				line-height: 55px;
 				bottom: 0;
 				left: 0;
 				text-align: center;
@@ -60,6 +60,7 @@
 			.name {
 				position: absolute;
 				top: 3px;
+				height: 20px;
 				right: 0;
 				left: 10px;
 				padding: 0 5px;
@@ -73,21 +74,35 @@
 			.diff {
 				position: absolute;
 				text-align: center;
-				bottom: 4px;
+				bottom: 18px;
 				right: 0;
 				left: 20px;
 				font-weight: bold;
 				text-shadow: 2px 2px 0 rgba(0, 0, 0, 0.2);
 			}
-
+			.lastLapTime {
+				position: absolute;
+				text-align: center;
+				bottom: 1px;
+				right: 0;
+				left: 20px;
+				font-weight: bold;
+				text-shadow: 2px 2px 0 rgba(0, 0, 0, 0.2);
+			}
+			.profilePicture {
+				display: none;
+			}
 			&.isUser {
 				background: rgba(0, 0, 0, 0.3);
 				.diff {
-					bottom: 8px;
+					top: 15px;
 					font-size: 25px;
 					color: rgb(241, 239, 65);
 				}
 				.name {
+					display: none;
+				}
+				.lastLapTime {
 					display: none;
 				}
 			}
@@ -130,13 +145,13 @@
 	.sessionTime,
 	.currentLap,
 	.currentPosition {
-		top: 50px;
+		top: 60px;
 	}
 	.fastestLap {
-		top: 120px;
+		top: 130px;
 	}
 	.lastLap {
-		top: 190px;
+		top: 200px;
 	}
 }
 
@@ -147,11 +162,11 @@
 
 	top: 75%;
 	left: 12%;
-	width: 290px;
+	width: 310px;
 	transform-origin: bottom right;
 	border-radius: 5px;
 	.player {
-		padding: 4px 10px;
+		padding: 3px 10px;
 		position: relative;
 		white-space: nowrap;
 		&:nth-child(odd) {
@@ -159,13 +174,12 @@
 			border-radius: 4px;
 		}
 		&:first-child {
-			padding-top: 10px;
+			padding-top: 3px;
 		}
 		&:last-child {
-			padding-bottom: 10px;
+			padding-bottom: 3px;
 		}
 		.position {
-			background: rgba(0, 0, 0, 0.5);
 			width: 25px;
 			font-weight: bold;
 			text-align: center;
@@ -177,13 +191,24 @@
 			overflow: hidden;
 			height: 20px;
 			margin-bottom: -5px;
+			margin-left: 10px;
 			white-space: nowrap;
 			text-overflow: ellipsis;
 			vertical-align: top;
-			width: 190px;
+			width: 160px;
+		}
+		.profilePicture {
+			display: inline;
+			position: absolute;
+			left: 33px;
 		}
 		.diff {
 			display: inline-block;
+		}
+		.lastLapTime {
+			display: inline;
+			position: absolute;
+			right: 5px;
 		}
 		text-shadow: 2px 2px 2px rgba(0, 0, 0, 1);
 
@@ -200,6 +225,9 @@
 		&.isUser {
 			background: rgba(0, 0, 0, 0.6);
 			color: rgb(255, 253, 142);
+			.lastLapTime {
+				display: none;
+			}
 		}
 		.classStyle {
 			display: block;
